# manifold_clustering_reduction

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  README.rst  Untitled.ipynb  environment.yml  pyproject.toml  reduced_data.csv  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.csv  test2.csv  tox.ini  tutorial.py
data/: Gating.xlsx  cluster_groups.npy  cluster_groups.txt  flow_data.npy  flow_data.parquet  object_results.csv  object_results.csv:com.dropbox.attrs
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  mass_cytometry_umap.rst
notebooks/: None-requirements.txt  Untitled.ipynb  Untitled1.ipynb  clustering.ipynb  first_figure.html  gui.ipynb  paga.ipynb  reductions.ipynb
notebooks/.ipynb_checkpoints/: clustering-checkpoint.ipynb  gui-checkpoint.ipynb  reductions-checkpoint.ipynb
src/mass_cytometry_reduction/: __init__.py  __main__.py  cli.py
src/mcr/: __init__.py  __main__.py  cli.py  clustering.py  dash_gui.py  reduction.py
tests/: test_mass_cytometry_umap.py
