[tool.poetry]
name = "mcr"
version = "0.6.0"
description = "Perform dimensional reduction and clustering on moderately high dimensional data (i.e. mass cytometry), perform clustering, and visualize using Plotly Dash"
authors = ["Miles Smith <miles-smith@omrf.org>"]
license = "LGPL-3.0-or-later"
readme = "README.rst"
include = ["CHANGELOG.rst", "README.rst", "AUTHORS.rst", "CONTRIBUTING.rst"]
homepage = "https://github.com/milescsmith/manifold_clustering_reduction"
repository = "https://github.com/milescsmith/manifold_clustering_reduction"
keywords = ["umap", "clustering", "visualization"]
documentation = "https://manifold-clustering-reduction.readthedocs.io/en/latest/"

[tool.poetry.urls]
"Bug tracker" = "https://github.com/milescsmith/manifold_clustering_reduction/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.1.3"
leidenalg = "^0.8.10"
pandas = "^1.4.3"
numpy = "^1.22.0"
scikit-learn = "^1.1"
scipy = "^1.8.1"
umap-learn = "^0.5.3"
dash = { version = "^2.5", optional = true }
dash_bootstrap_components = { version = "^1.1.0", optional = true }
dash_daq = { version = "^0.5", optional = true }
dash-extensions = { version = "^0.1.4", optional = true }

[tool.poetry.dev-dependencies]
black = "^22.6"
cmake = "^3.22"
flake8 = "^4.0"
hdbscan = "^0.8.28"
isort = "^5.10"

matplotlib = "^3.5"

seaborn = "^0.11"
tensorflow = { version = "^2.9", optional = true }
pytest = "^7.1"
pytest-cov = "^3.0"
tox = "^3.25"
ipython = "^8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcr = "mcr.cli:main"
mcr-dash = "mcr.dash_gui:main"

[tool.poetry.extras]
dash = ["dash", "dash_bootstrap_components", "dash_daq", "dash_extensions"]

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py38"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mcr"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true