[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist

[options]
# tests_require is a list of dependencies that are *absolutely required*
# to run the tests. tests_require is used when running tests from your
# *current* Python environment (that is, not using tox).
# tests_require is ignored by tox.
#
# As such, you can usually get away with neglecting tests_require ---
# it's not a big deal if some of the dependencies get left out.
#
# If you're running tests from your current environment, it's because
# you're actively developing, in which case you usually have an
# environment you built for development. But if you have to change
# environments mid-development for any reason, tests_require can save you
# from getting tripped up.
#
# PyCharm, to ensure the environment the IDE is using has the requirements.
# tests_require is used when running tests and debugging through an IDE like
#
# Unless you're in one of those situations, you can simply ignore this.
tests_require = pytest
setup_requires = setuptools_scm

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

# [tool:isort]
# force_single_line = True
# line_length = 120
# known_first_party = mass_cytometry_reduction
# default_section = THIRDPARTY
# forced_separate = test_mass_cytometry_reduction
# skip = .tox,.eggs,ci/templates,build,dist

[mypy]
# mypy configurations: http://bit.ly/2zEl9WI
python_version = 3.7
pretty = True
allow_redefinition = False
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
ignore_missing_imports = True
implicit_reexport = False
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_no_return = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_return_any = True
warn_unreachable = True
show_error_codes = True
show_column_numbers = True
show_error_context = True